# stellar-syndicates

./: .gitignore  Cargo.toml  GAME_DESIGN.md  MULTIPLAYER_PROMPT.md  README.md
.claude/: launch.json
assets/: wormhole_hub.pxd
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/art-src/resource-icons/: README.md
client/public/art/: manifest.json
client/public/art/celestial_sprites/stars/: manifest.json
client/public/art/celestial_sprites/stars/icons/: manifest.json
client/public/art/ui_icons/: manifest.json
client/src/: battletheater.ts  icons.ts  main.ts  net.ts  prng.ts  protocol.ts  render.ts  stars.ts  state.ts  systemview.ts
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql
crates/server/src/: estimate.rs  game_loop.rs  main.rs  persistence.rs  protocol.rs  reports.rs  session.rs  timeline.rs  view.rs  ws.rs
crates/sim/: Cargo.toml
crates/sim/src/: body.rs  build.rs  cargo.rs  colony.rs  combat.rs  command.rs  config.rs  detection.rs  doctrine.rs  event.rs  explore.rs  fuel.rs  galaxy.rs  ids.rs  lib.rs  market.rs  math.rs  module.rs  movement.rs  node.rs  pirate.rs  production.rs  rankings.rs  research.rs  rng.rs  ship.rs  specialist.rs  standing.rs  syndicate.rs  tactical.rs  tca.rs  world.rs
crates/sim/tests/: audit_determinism.rs
docs/: research-programme-boards-v6.md
scripts/: aggro.mjs  battle_rvr_smoke.mjs  battle_smoke.mjs  claims_smoke.mjs  devdb.sh  economy_smoke.mjs  hold_client.mjs  hold_defender.mjs  limit_smoke.mjs  m1_smoke.mjs  m2_smoke.mjs  m3_smoke.mjs  m4_smoke.mjs  own_fog_check.mjs  patrol_defense_smoke.mjs  raid_convoy.mjs  restart_smoke.sh  scale_smoke.mjs  sensor_smoke.mjs
