[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sim = { version = "0.1.0", path = "../sim" }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "macros", "json", "chrono", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
